# pygments-simtalk

./: LICENSE.MD  README.md  pyproject.toml  requirements.txt
pygments_simtalk/: simtalk_lexer.py
tests/: test.exmpl
